[package]
name = "rustest"
version = "0.1.0"
authors = ["Iaroslav Gridin <voker57@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.9.0"
features = ["v3_24_9"]

[dependencies.gio]
version = ""
features = ["v2_64"]
