[package]
name = "gtktest"
version = "0.1.0"
authors = ["Iaroslav Gridin <voker57@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.gtk]
version = "0.9.0"
features = ["v3_24_9"]

[dependencies.gdk-pixbuf]
version = ""
features = ["v2_40"]

[dependencies.cairo-rs]
version = ""
features = ["v1_16"]

[dependencies.gdk]
version = ""
features = ["v3_24"]

[dependencies.gio]
version = ""
features = ["v2_64"]

[dependencies.glib]
version = ""
features = ["v2_64"]
